fix: truncated component didnt work, fixed w css

--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,13 @@ input[type=number] {
   right: 0;
 
 }
+
+.multine-ellipsis {
+  width: 100%;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
